# iree

compiler/src/iree/compiler/Codegen/Common/: BufferizationAnalysis.cpp  IREEComprehensiveBufferizePass.cpp
compiler/src/iree/compiler/Codegen/Common/GPU/: GPUDistributionPatterns.cpp
compiler/src/iree/compiler/Codegen/Interfaces/: PartitionableLoopsInterface.cpp
compiler/src/iree/compiler/Codegen/LLVMCPU/: ConvertToLLVM.cpp
compiler/src/iree/compiler/Codegen/LLVMGPU/: LLVMGPUVectorDistribute.cpp
compiler/src/iree/compiler/Codegen/Utils/: LinkingUtils.cpp
compiler/src/iree/compiler/Dialect/HAL/IR/: HALBase.td  HALOps.td  HALTypes.cpp
compiler/src/iree/compiler/Dialect/HAL/IR/test/: attributes.mlir
compiler/src/iree/compiler/Dialect/HAL/Transforms/: MaterializeInterfaces.cpp
compiler/src/iree/compiler/Dialect/Stream/Transforms/: EmplaceAllocations.cpp
compiler/src/iree/compiler/Preprocessing/Common/: ConvertConvToChannelsLast.cpp
runtime/src/iree/hal/drivers/cuda/: api.h  cuda_allocator.c  cuda_allocator.h  cuda_device.c  cuda_device.h  cuda_driver.c
runtime/src/iree/hal/drivers/cuda/registration/: driver_module.c
samples/custom_dispatch/: README.md
samples/custom_dispatch/cpu/embedded/: CMakeLists.txt  README.md  example.mlir
samples/custom_dispatch/cuda/kernels/: CMakeLists.txt  README.md  example.mlir
samples/custom_dispatch/vulkan/shaders/: README.md  example.mlir
